refactor: refactor codegen api and file structure
