# openapi.yaml
@@ -96,6 +96,78 @@
   ],
   "components": {
     "schemas": {
+      "Urls": {
+        "type": "object",
+        "properties": {
+          "full": {
+            "type": "string"
+          },
+          "regular": {
+            "type": "string"
+          },
+          "small": {
+            "type": "string"
+          },
+          "thumb": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "full",
+          "regular",
+          "small",
+          "thumb"
+        ]
+      },
+      "Author": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "username": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "username"
+        ]
+      },
+      "Location": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "city": {
+            "type": "string"
+          },
+          "country": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "name",
+          "city",
+          "country"
+        ]
+      },
+      "Links": {
+        "type": "object",
+        "properties": {
+          "self": {
+            "type": "string"
+          },
+          "download": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "self",
+          "download"
+        ]
+      },
       "Unsplash": {
         "type": "object",
         "properties": {
@@ -115,7 +187,6 @@
             }
           },
           "urls": {
-            "type": "object",
             "description": "contains all dimensions",
             "example": {
               "raw": "https://images.unsplash.com/photo-1417325384643-aac51acc9e5d",
@@ -123,32 +194,49 @@
               "regular": "https://images.unsplash.com/photo-1417325384643-aac51acc9e5d?q=75&fm=jpg&w=1080&fit=max",
               "small": "https://images.unsplash.com/photo-1417325384643-aac51acc9e5d?q=75&fm=jpg&w=400&fit=max",
               "thumb": "https://images.unsplash.com/photo-1417325384643-aac51acc9e5d?q=75&fm=jpg&w=200&fit=max"
-            }
+            },
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/Urls"
+              }
+            ]
           },
           "author": {
-            "type": "object",
             "description": "author picture",
             "example": {
               "id": "QPxL2MGqfrw",
               "username": "exampleuser"
-            }
+            },
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/Author"
+              }
+            ]
           },
           "location": {
-            "type": "object",
             "description": "the location of the created photo",
             "example": {
               "name": "Montreal, Canada",
               "city": "Montreal",
               "country": "Canada"
-            }
+            },
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/Location"
+              }
+            ]
           },
           "links": {
-            "type": "object",
             "description": "meta information about photo",
             "example": {
               "self": "https://api.unsplash.com/photos/Dwu85P9SOIk",
               "download": "https://unsplash.com/photos/Dwu85P9SOIk/download"
-            }
+            },
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/Links"
+              }
+            ]
           }
         },
         "required": [
